grammar.txt

program : PROGRAM identifier ; block DOT

block : var_decl_sect? sub_decl_sect? compound_stmt;


var_decl_sect : VAR var_decl SEMICOL ( var_decl SEMICOL)*;

var_decl : identifier (COMMA identifier)* COLON type 
         ;

type : simple_type
     | array_type
     ;

array_type : ARRAY LBRACK index_range RBRACK OF simple_type;

index_range : integer_constant DOTDOT integer_constant;

simple_type : char | integer | integer;


sub_decl_sect : ((proc_decl | func_decl) SEMICOL)*
              ;

proc_decl : PROCEDURE identifier formal_params? SEMICOL block;

func_decl : FUNCTION identifier formal_params? COLON type SEMICOL block;

formal_params : LPAR param_section RPAR; 

param_section: var_decl (SEMICOL var_decl);


compound_stmt: BEGIN statement (SEMICOL statement) END;

statement : simple_stmt
          | struct_stmt
          ;

simple_stmt : variable (ASSIGN expression | formal_args)? 
            | read_stmt 
            | write_stmt
            ;

formal_args : LPAR expression (, expression)* RPAR

read_stmt : READ io_args;

write_stmt : WRITE io_args;

io_args: LPAR variable (COMMA variable)* RPAR

struct_stmt: compound_stmt
           | if_stmt
           | while_stmt
           ;

if_stmt : IF expression THEN statement (ELSE statement)?

while_stmt : WHILE expression do statement

expression : simple_expression (relational_op simple_expression)? ;

simple_expression : (sign)? term (adding_op term)* ;

term : factor (mult_op factor)*;

factor : var_expr | INTEGER | STRING | LPAR expression RPAR | NOT factor;

rel_op : EQ 
       | NOTEQ 
       | LESS 
       | LESSEQ 
       | GREATEREQ 
       | GREATEREQ 
       | OR
       | AND
       ;
       
add_op : PLUSOP
       | SUBOP
       ;

mult_op: MULOP
       | DIV
       | SLASH
       ;

variable : identifier (LBRACK expression RBRACK)?;

var_expr : identifier (LBRACK expression RBRACK | LPAR formal_args RPAR)?;
